k8s/app/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redemption-api
  namespace: redemption
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: redemption-api
