k8s/app/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redemption-api
  namespace: redemption
spec:
  rules:
    - host: redemption-dev.thixpin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redemption-api
                port:
                  number: 80
